# sundae

./: CMakeLists.txt  Cargo.toml  README.md  a.out  basic.su  comments.su  complex.su  flake.nix  output.ll  output.s  rustfmt.toml  sample.bc  sample.ll  sample.su  sample_v2.su
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 0lcv5x4667sybc99094apymh5jxr4zrl-source  fdy2b9n83ksarxhddniyb6wxzh9628g6-source
.github/workflows/: rust.yml
compiler/: Cargo.toml
compiler-codegen-llvm/: Cargo.toml
compiler-codegen-llvm/src/: expression.rs  item.rs  lib.rs  statement.rs
compiler-codegen-llvm/src/expression/: binary.rs
compiler-driver/: Cargo.toml
compiler-driver/src/: main.rs
compiler-lexer/: Cargo.toml
compiler-lexer/src/: definitions.rs  iterator.rs  lib.rs
compiler-lexer/src/definitions/: constants.rs  span.rs  token.rs
compiler-lexer/tests/: correct_source.rs  invalid_token.rs  unclosed_delim.rs
compiler-parser/: Cargo.toml
compiler-parser/src/: expression.rs  item.rs  iterator.rs  lib.rs  statement.rs
compiler-parser/src/expression/: binary.rs  operator.rs
compiler-parser/tests/: correct_source.rs
compiler/src/: _codegen.rs  codegen.rs  lexer.rs  main.rs  math_example.rs  parser.rs
compiler/src/codegen/: expression.rs  item.rs  statement.rs  types.rs
compiler/src/codegen/expression/: binary.rs
compiler/src/components/: codegen_types.rs  mod.rs  parser_types.rs  prelude.rs
compiler/src/components/expression/: codegen.rs  mod.rs  parse.rs
compiler/src/components/expression/binary/: codegen.rs  mod.rs  parse.rs
compiler/src/components/item/: codegen.rs  mod.rs  parse.rs
compiler/src/components/statement/: codegen.rs  mod.rs  parse.rs
compiler/src/lexer/: definitions.rs  mod.rs
compiler/src/parser/: binary.rs  expression.rs  item.rs  statement.rs  types.rs
compiler/src/parser/expression/: binary.rs
examples/: basic.su  complex.su  main.su  sample.su  test.rs  test.su  use_cases.su
library_next/: main.su
llvm-samples/: a.ll  a.out  a.rs  b.ll  cpp.cpp  cpp.ll
output/: basic  basic.ll  sample  sample.ll  test.ll
sundae/: lexer.cc  lexer.h  lexer_test.cc  main.cc  parser.cc  parser.h  parser_test.cc
