cargo-features = ["codegen-backend"]

[workspace]
members = [
    "compiler-codegen-llvm",
    "compiler-driver",
    "compiler-lexer",
    "compiler-parser",
    "library",
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
codegen-backend = "cranelift"
