[package]
name = "sundae"
description = "Compiler for sundae"
version = "0.1.0"
edition = "2024"

[dependencies]
compiler-lexer = { path = "../compiler-lexer" }
compiler-parser = { path = "../compiler-parser" }
compiler-codegen-llvm = { path = "../compiler-codegen-llvm" }
clap = { version = "4.5.54", features = ["derive"] }
mimalloc = "*"
ecow = "0.2.6"
miette = { version = "7.6.0", features = ["fancy"] }
